# light-curve-dmdt

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.ci/: compose-readme.py  readme-example.sh
.github/: copilot-instructions.md
.github/workflows/: test.yml
light-curve-dmdt/: CHANGELOG.md  Cargo.toml
light-curve-dmdt-exec/: main.rs
light-curve-dmdt/benches/: cond_prob.rs  erf.rs  gausses.rs  grid.rs  lib.rs
light-curve-dmdt/src/: bayesian_blocks.rs  dmdt.rs  grid.rs  images.rs  lib.rs  util.rs
