[package]
name = "light-curve-dmdt-exec"
version = "0.6.1"
description = "Program for dm-dt maps generator from light curves"
readme = "README.md"
repository = "https://github.com/light-curve/light-curve-dmdt"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
rust-version = "1.60"
edition = "2018"

[[bin]]
name = "dmdt"
path = "light-curve-dmdt-exec/main.rs"

[workspace]
members = ["light-curve-dmdt"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help"] }
enumflags2 = "0.7"
thiserror = "2"

[dependencies.light-curve-dmdt]
version = "0.7.1"
path = "light-curve-dmdt"
features = ["png"]
