[package]
name = "light-curve-dmdt-exec"
version = "0.6.2"
description = "Program for dm-dt maps generator from light curves"
readme = "README.md"
repository = "https://github.com/light-curve/light-curve-dmdt"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
rust-version = "1.67"
edition = "2018"

[[bin]]
name = "dmdt"
path = "light-curve-dmdt-exec/main.rs"

[workspace]
members = ["light-curve-dmdt"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# both clap and clap_lax are set for current MSRV
clap = { version = "=4.3", features = ["cargo", "wrap_help"] }
clap_lex = "=0.5.0"
enumflags2 = "0.7"
thiserror = "2"

[dependencies.light-curve-dmdt]
version = "0.8.0"
path = "light-curve-dmdt"
features = ["png"]
