[package]
name = "light-curve-dmdt"
version = "0.8.0"
description = "dm-dt maps generator library"
readme = "../README.md"
repository = "https://github.com/light-curve/light-curve-dmdt"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
rust-version = "1.85"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "light_curve_dmdt"
path = "src/lib.rs"
bench = false

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false

[dependencies]
conv = "0.3.3"
embed-doc-image = { version = "0.1.4", optional = true }
enum_dispatch = "0.3.12"
itertools = "0.14"
libm = "0.2.15" # erf
ndarray = "0.16.1"
num-traits = "0.2.14"
png = { version = "0.18", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
light-curve-dmdt = { path = ".", features = ["full"] }
approx = "0.5"
criterion = "0.5"
mathru = "0.16"
special = "0.11"
static_assertions = "1.1"

[features]
doc-images = ["embed-doc-image"]
png = ["dep:png"]
serde = ["dep:serde", "ndarray/serde"]
default = []
full = ["doc-images", "png", "serde"]

[package.metadata.docs.rs]
features = ["full"]
